k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: complex-server
          image: gillesev/complex-server@sha256:18856b435a218f28afeccafa864600bcacaf1ed3deaa8bd827a752f3e0364e27
          ports:
            - containerPort: 5000
