k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: complex-worker
          image: gillesev/complex-worker@sha256:2bee062ea36ade9eeb5721fb29932ad7125f8f5cd19a8bd4b3242b50fd6cbfe8
